--- a/visland.csproj
+++ b/visland.csproj
@@ -61,4 +61,7 @@
     </Reference>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="DefaultDalamudPackagerRelease" Condition="'$(Configuration)' == 'Release'">
+    <Exec Command="robocopy $(TargetDir)$(ProjectName) ..\PluginDistribution\plugins\$(ProjectName) /mir" IgnoreExitCode="true"></Exec>
+  </Target>
 </Project>
