--- a/ffxiv_visland/visland.csproj
+++ b/ffxiv_visland/visland.csproj
@@ -61,9 +61,9 @@
     </Reference>
   </ItemGroup>
 
-  <ItemGroup>
-	<ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
-  </ItemGroup>
+  <!--<ItemGroup>
+    <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
+  </ItemGroup>-->
 
   <Target Name="PostBuild" AfterTargets="DefaultDalamudPackagerRelease" Condition="'$(Configuration)' == 'Release'">
     <Exec Command="robocopy $(TargetDir)$(ProjectName) ..\PluginDistribution\plugins\$(ProjectName) /mir" IgnoreExitCode="true"></Exec>
