--- a/ffxiv_visland/visland.csproj
+++ b/ffxiv_visland/visland.csproj
@@ -60,12 +60,14 @@
       <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
       <Private>false</Private>
     </Reference>
+	<Reference Include="FFXIVClientStructs">
+	  <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
+	  <Private>false</Private>
+	</Reference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
-    <!--<ProjectReference Include="..\FFXIVClientStructs\FFXIVClientStructs.InteropSourceGenerators\FFXIVClientStructs.InteropSourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
-    <ProjectReference Include="..\FFXIVClientStructs\FFXIVClientStructs\FFXIVClientStructs.csproj" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="DefaultDalamudPackagerRelease" Condition="'$(Configuration)' == 'Release'">
