--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Build & Publish to Dynamis
 on:
   push:
     tags:
-      - "v*.*.*.*"
+      - "v*.*"
 
 jobs:
   Build:
@@ -26,14 +26,14 @@ jobs:
           
       - name: Download Dalamud Latest
         run: |
-          wget https://goatcorp.github.io/dalamud-distrib/latest.zip -O ${{ env.DALAMUD_HOME }}.zip
+          wget https://goatcorp.github.io/dalamud-distrib/stg/latest.zip -O ${{ env.DALAMUD_HOME }}.zip
           unzip ${{ env.DALAMUD_HOME }}.zip -d ${{ env.DALAMUD_HOME }}
 
       - name: Restore Project
         run: dotnet restore
 
       - name: Build Project
-        run: dotnet build --configuration Release ffxiv_visland/visland.csproj -p:AssemblyVersion=${{ env.tag }}
+        run: dotnet build --configuration Release ffxiv_visland/visland.csproj -p:AssemblyVersion=0.0.0.${{ env.tag }}
 
       - name: Publish Version
         uses: PunishXIV/dynamis-action@v1
@@ -44,6 +44,6 @@ jobs:
           version_number: ${{ env.tag }}
           path: "ffxiv_visland/bin/Release/visland/latest.zip"
           type: "latest"
-          dalamud_version: "9"
+          dalamud_version: "10"
         env:
           PUBLISHER_KEY: ${{ secrets.PUBLISHER_KEY }}
