--- a/ffxiv_visland/visland.csproj
+++ b/ffxiv_visland/visland.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <PackageReference Include="DalamudPackager" Version="2.1.12" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
+    <PackageReference Include="YamlDotNet" Version="16.0.0" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
       <Private>false</Private>
