--- a/ffxiv_visland/visland.csproj
+++ b/ffxiv_visland/visland.csproj
@@ -19,6 +19,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+	  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -31,43 +32,46 @@
 
   <ItemGroup>
     <PackageReference Include="DalamudPackager" Version="2.1.12" />
+    <PackageReference Include="ExdSheets" Version="2.1.0" />
+	<PackageReference Include="Lumina" Version="4.1.1" ExcludeAssets="all" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
     <PackageReference Include="YamlDotNet" Version="16.0.0" />
     <Reference Include="Newtonsoft.Json">
-      <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
-      <Private>false</Private>
+        <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
+        <Private>false</Private>
     </Reference>
     <Reference Include="Dalamud">
-      <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
-      <Private>false</Private>
+        <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
+        <Private>false</Private>
     </Reference>
     <Reference Include="Dalamud.Common">
-      <HintPath>$(DalamudLibPath)Dalamud.Common.dll</HintPath>
-      <Private>false</Private>
+        <HintPath>$(DalamudLibPath)Dalamud.Common.dll</HintPath>
+        <Private>false</Private>
     </Reference>
     <Reference Include="ImGui.NET">
-      <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
-      <Private>false</Private>
+        <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
+        <Private>false</Private>
     </Reference>
     <Reference Include="ImGuiScene">
-      <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
-      <Private>false</Private>
+        <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
+        <Private>false</Private>
     </Reference>
     <Reference Include="Lumina">
-      <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
-      <Private>false</Private>
+        <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
+        <Private>false</Private>
     </Reference>
     <Reference Include="Lumina.Excel">
-      <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
-      <Private>false</Private>
+        <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
+        <Private>false</Private>
     </Reference>
-	<Reference Include="FFXIVClientStructs">
-	  <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
-	  <Private>false</Private>
-	</Reference>
+    <Reference Include="FFXIVClientStructs">
+	    <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
+	    <Private>false</Private>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AutoRetainerAPI\AutoRetainerAPI\AutoRetainerAPI.csproj" />
     <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
   </ItemGroup>
 
