--- a/ffxiv_visland/visland.csproj
+++ b/ffxiv_visland/visland.csproj
@@ -32,9 +32,9 @@
 
   <ItemGroup>
     <PackageReference Include="DalamudPackager" Version="11.0.0" />
-	<PackageReference Include="Lumina" Version="5.6.0" ExcludeAssets="all" />
-	<PackageReference Include="Lumina.Excel" Version="7.1.3" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageReference Include="YamlDotNet" Version="16.2.0" />
     <Reference Include="Newtonsoft.Json">
         <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
