--- a/ffxiv_visland/visland.csproj
+++ b/ffxiv_visland/visland.csproj
@@ -1,85 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <Authors></Authors>
-    <Company></Company>
+<Project Sdk="Dalamud.NET.Sdk/12.0.2">
+<PropertyGroup>
     <Version>0.0.0.0</Version>
-    <Description>Island sanctuary automation</Description>
-    <Copyright></Copyright>
-    <PackageProjectUrl>https://github.com/awgil/ffxiv_visland</PackageProjectUrl>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <TargetFramework>net9.0-windows</TargetFramework>
-    <Platforms>x64</Platforms>
-    <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-    <EnableWindowsTargeting>true</EnableWindowsTargeting>
-	  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
-  </PropertyGroup>
-  
    <PropertyGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))'">
     <DalamudLibPath>$(DALAMUD_HOME)/</DalamudLibPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DalamudPackager" Version="11.0.0" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageReference Include="YamlDotNet" Version="16.2.0" />
-    <Reference Include="Newtonsoft.Json">
-        <HintPath>$(DalamudLibPath)Newtonsoft.Json.dll</HintPath>
-        <Private>false</Private>
-    </Reference>
-    <Reference Include="Dalamud">
-        <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
-        <Private>false</Private>
-    </Reference>
-    <Reference Include="Dalamud.Common">
-        <HintPath>$(DalamudLibPath)Dalamud.Common.dll</HintPath>
-        <Private>false</Private>
-    </Reference>
-    <Reference Include="ImGui.NET">
-        <HintPath>$(DalamudLibPath)ImGui.NET.dll</HintPath>
-        <Private>false</Private>
-    </Reference>
-    <Reference Include="ImGuiScene">
-        <HintPath>$(DalamudLibPath)ImGuiScene.dll</HintPath>
-        <Private>false</Private>
-    </Reference>
-    <Reference Include="Lumina">
-        <HintPath>$(DalamudLibPath)Lumina.dll</HintPath>
-        <Private>false</Private>
-    </Reference>
-    <Reference Include="Lumina.Excel">
-        <HintPath>$(DalamudLibPath)Lumina.Excel.dll</HintPath>
-        <Private>false</Private>
-    </Reference>
-    <Reference Include="FFXIVClientStructs">
-	    <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
-	    <Private>false</Private>
-    </Reference>
-    <Reference Include="InteropGenerator.Runtime">
-	    <HintPath>$(DalamudLibPath)InteropGenerator.Runtime.dll</HintPath>
-	    <Private>False</Private>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AutoRetainerAPI\AutoRetainerAPI\AutoRetainerAPI.csproj" />
     <ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
   </ItemGroup>
-
-  <Target Name="PostBuild" AfterTargets="DefaultDalamudPackagerRelease" Condition="'$(Configuration)' == 'Release'">
-    <Exec Command="robocopy $(TargetDir)$(ProjectName) ..\PluginDistribution\plugins\$(ProjectName) /mir" IgnoreExitCode="true"></Exec>
-  </Target>
 </Project>
