--- a/ffxiv_visland/visland.csproj
+++ b/ffxiv_visland/visland.csproj
@@ -10,11 +10,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="ECommons" Version="3.0.1.3" />
 		<PackageReference Include="YamlDotNet" Version="16.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\AutoRetainerAPI\AutoRetainerAPI\AutoRetainerAPI.csproj" />
-		<ProjectReference Include="..\ECommons\ECommons\ECommons.csproj" />
 	</ItemGroup>
 </Project>
